# swagger.yaml
@@ -7,7 +7,7 @@ info:
     version: 1.0.409
 
 servers:
-    - url: http://localhost:3001/api/v2
+    - url: http://localhost:5173/api/v2
 
 tags:
     - name: Bank Accounts
@@ -17,39 +17,76 @@ tags:
       description: Access to transactions
 
 paths:
-    /bankAccount/transaction/details:
-        patch:
+    /bankAccounts/{bankAccountId}/transactions:
+        get:
             tags: [Transactions]
-            summary: Update of the specified transaction
-            requestBody:
-                description: Update one or more fields of a transaction
-                content:
-                    application/json:
-                        schema:
-                            type: object
-                            properties:
-                                TransactionType:
-                                    type: string
-                                    enum: [Electronic, card]
-                                Category:
-                                    type: string
-                                    enum: [Food, clothes, restaurant]
-                                description:
-                                    type: string
+            summary: Transaction  from the specified bank account
+            parameters:
+                - name: bankAccountId
+                  in: path
+                  description: ID of the specified bank account
+                  required: true
+                  schema:
+                      type: string
+
+                - name: page
+                  description: Example:1
+                  in: query
+                  required: true
+                  schema:
+                      type: integer
+                      minimum: 1
+
+                - name: pageSize
+                  description: number of transactions per page Example:10
+                  in: query
+                  required: true
+                  schema:
+                      type: integer
+                      minimum: 1
+                      maximum: 10
             responses:
+                "400":
+                    description: Invalid Fields
                 "401":
                     $ref: "#/components/responses/UnauthorizedError"
                 "500":
                     description: Internal Server Error
                 "200":
                     description: OK
+                    content:
+                        application/json:
+                            schema:
+                                type: array
+                                items:
+                                    type: object
+                                    properties:
+                                        id:
+                                            type: string
+                                        date:
+                                            type: string
+                                        description:
+                                            type: string
+                                        currency:
+                                            type: string
+                                            enum: [$, €]
+                                        amount:
+                                            type: number
 
+    /bankAccounts/{bankAccountId}/transactions/{transactionId}:
         get:
             tags: [Transactions]
             summary: Details of each transaction
             parameters:
-                - name: ID
-                  in: query
+                - name: bankAccountId
+                  in: path
+                  description: ID of the specified bank account
+                  required: true
+                  schema:
+                      type: string
+
+                - name: transactionId
+                  in: path
                   description: ID of the specified transaction
                   required: true
                   schema:
@@ -77,22 +114,31 @@ paths:
                                     description:
                                         type: string
 
-    /bankAccount/transaction:
-        get:
+        patch:
             tags: [Transactions]
-            summary: Transaction  from the specified bank account
-            parameters:
-                - name: ID
-                  in: query
-                  description: ID of the specified bank account
-                  required: true
-                  schema:
-                      type: string
+            summary: Update of the specified transaction
+            requestBody:
+                description: Update one or more fields of a transaction
+                content:
+                    application/json:
+                        schema:
+                            type: object
+                            properties:
+                                TransactionType:
+                                    type: string
+                                    enum: [Electronic, card]
+                                Category:
+                                    type: string
+                                    enum: [Food, clothes, restaurant]
+                                Note:
+                                    type: string
             responses:
                 "400":
-                    description: Invalid Fields
+                    description: Bad request
                 "401":
                     $ref: "#/components/responses/UnauthorizedError"
+                "422":
+                    description: Unprocessable Entity
                 "500":
                     description: Internal Server Error
                 "200":
@@ -102,23 +148,37 @@ paths:
                             schema:
                                 type: object
                                 properties:
-                                    id:
+                                    TransactionType:
                                         type: string
-                                    date:
+                                        enum: [Electronic, card]
+                                    Category:
                                         type: string
-                                    description:
+                                        enum: [Food, clothes, restaurant]
+                                    Note:
                                         type: string
-                                    currency:
-                                        type: string
-                                        enum: [$, €]
-                                    amount:
-                                        type: number
-
-    /bankAccount:
+    /bankAccounts:
         get:
             tags:
                 - Bank Accounts
             summary: BankAccounst API
+            parameters:
+                - name: page
+                  description: Example:1
+                  in: query
+                  required: true
+                  schema:
+                      type: integer
+                      minimum: 1
+
+                - name: pageSize
+                  description: number of bankAccount per page Example:3
+                  in: query
+                  required: true
+                  schema:
+                      type: integer
+                      minimum: 1
+                      maximum: 10
+
             responses:
                 "400":
                     description: Invalid Fields
@@ -131,18 +191,22 @@ paths:
                     content:
                         application/json:
                             schema:
-                                type: object
-                                properties:
-                                    type:
-                                        type: string
-                                        enum: [credit-card, checking, savings]
-                                    id:
-                                        type: string
-                                    currency:
-                                        type: string
-                                        enum: [$, €]
-                                    balance:
-                                        type: number
+                                type: array
+                                items:
+                                    type: object
+                                    properties:
+                                        type:
+                                            type: string
+                                            enum: [credit-card, checking, savings]
+                                        accountId:
+                                            type: string
+                                        currency:
+                                            type: string
+                                            enum: [$, €]
+                                        userId:
+                                            type: string
+                                        balanceType:
+                                            type: string
 
 components:
     securitySchemes:
